# LameMp3

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zhang/lamemp3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zhang/lamemp3/: MainActivity.java  PermissionTool.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhang/lamemp3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_lame/: CMakeLists.txt  build.gradle  proguard-rules.pro
lib_lame/src/main/: AndroidManifest.xml
lib_lame/src/main/cpp/: bitstream.c  fft.c  native-lib.c
lib_lame/src/main/cpp/include/: native-lib.h  util.h
lib_lame/src/main/java/com/zhang/lamemp3/: MThread.java  Mp3Player.java
lib_lame/src/main/java/com/zhang/lamemp3/jni/: LameMp3.java
